# llm-zoomcamp-smart-mail

./: .dockerignore  .gitignore  Dockerfile.notebook  Dockerfile.ollama  Dockerfile.ollama.gemma2b  docker-compose.devcontainer.notebook.yml  docker-compose.devcontainer.smart_mail.yml  docker-compose.test.yml  docker-compose.yml  how_to_add_projects_to_kb.md  mage.code-workspace  notebook.code-workspace  readme.md  smart_mail.code-workspace  useful_links.md
.devcontainer/mage/: devcontainer.json
.devcontainer/notebook/: devcontainer.json
.devcontainer/smart_mail/: devcontainer.json
mage/: .env.dev  .flake  .gitignore  Dockerfile
mage/data/: .gitignore
mage/zoomcamp-smart-mail/: metadata.yaml  requirements.txt  settings.yaml
notebook/: .env.dev  .gitignore  model_id.py  notebook.code-workspace  requirements.txt  rrf.py
notebook/evaluate_prototype/: get_emails.ipynb
notebook/llm_prompts/: mailbox_message_to_csv.ipynb  page_to_csv.ipynb  project_names.ipynb  project_to_csv.ipynb
notebook/named_entity_recognition/: ned_tests.ipynb
notebook/project_name_extactor_evaluation/: ground_truth.csv
notebook/project_name_extractor_evaluation/: 01_create_ground_truth.ipynb  02_evaluate_function.ipynb  03.1_evaluate_function_without_donation.ipynb  03.2_evaluate_without_donation_similarity_is_0_185.ipynb  03.3_evaluate_without_donation_with_text_preprocessor.ipynb  03_evaluate_function_without_donation.ipynb  04_similarity_and_exact_matching.ipynb  TEMP 03.2_evaluate_without_donation_similarity_is_0_185.ipynb  TEMP 03.3_evaluate_without_donation_with_text_preprocessor.ipynb  chat_gpt_answer.md  ground_truth.csv  ground_truth_v2.csv  preprocessors.ipynb
notebook/retrieval_evaluation/: 01_create_doc_ids_for_dataset.ipynb  02_create_ground_truth.ipynb  03.02_evaluate_text_de_analyzer.ipynb  03.02_evaluate_text_german_analyzer.ipynb  03_evaluate_text_retrieval.ipynb  04.2_vector_question_answer_retrieval_several_models.ipynb  04_vector_question_answer_retrieval.ipynb  05.02_evaluate_reranking_with_german_analyzer.ipynb  05_evaluate_reranking.ipynb  06_vector_answer_retrieval.ipynb  20_analytics.ipynb  (+3 more)
scripts/: download_models.py  init-db.sh
smart_mail/: .env.dev  .flake8  Dockerfile  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt
smart_mail/src/: customer_support_client.py  email_client.py  streamlit_runner.py
smart_mail/src/agents/: __init__.py  email_agent.py  projects_agent.py
smart_mail/src/common/: __init__.py  client_factory.py  database_manager.py  emails.py  model_base.py  sentence_transformer_model_factory.py  settings.py
smart_mail/src/data_loaders/: __init__.py  email_loader.py  projects_loader.py  repayment_schedule_loader.py
smart_mail/src/dtos/: identified_project.py  project.py  project_dto.py  retrieval_request.py
smart_mail/src/handler/: email_handler.py
smart_mail/src/queries/: es_get_index.http
smart_mail/src/services/: prompt_creator.py  reciprocal_rank_fusion_service.py  retrieval_result.py  retrieval_service.py  search_result.py
smart_mail/src/services/content/: content_data_preparer.py  project_identifier_service.py  text_preprocessor.py  text_preprocessor_service.py
smart_mail/src/services/database/: answer_model.py  database_service.py  user_feedback_model.py  user_feedback_type_model.py
smart_mail/src/services/generation/: aws_generation_service.py  generation_result.py  generation_service.py  ollama_generation_service.py  prompt_creator.py
smart_mail/src/services/generation/templates/: prompt_template.jinja2
smart_mail/src/user/: user_metadata.py
smart_mail/tests/services/: reciprocal_rank_fusion_service_test.py
(+54 files in other folders)
